--- a/Hierarchical Clustering.ipynb
+++ b/Hierarchical Clustering.ipynb
@@ -19,7 +19,7 @@
     "* Data Manipulation\n",
     "* Hierarchical Clustering - An application of Machine Learning\n",
     "\n",
-    "This project is for the purpose of demonstrating my knowledge of:\n",
+    "This project is for the purpose of demonstrating:\n",
     "\n",
     "* Machine Learning - Clustering\n",
     "* Data visualization\n",
